--- a/pillReminderFE/src/styles/styles.css
+++ b/pillReminderFE/src/styles/styles.css
@@ -1,6 +1,156 @@
-.container{
+body{
+  background-color: #E5F0EB;
+  
+  }
+  
+  .container{
   width: 50%;
   margin-left: 25%;
   text-align: center;
+  background-color: #AFD5B1;
+  box-shadow: 5px 5px #888888;
   }
   
+  .heading{
+      text-align: center;
+      font-family: 'Dancing Script', cursive;
+  }
+  
+  .sidebar {
+     /* position:flex;
+     /* top: 51px;*/
+     height: calc(100% - 50px - 60px);
+     
+      bottom: 0;
+      left: 0;
+      z-index: 1000;
+      display: block;
+      padding: 20px;
+      overflow-x: hidden;
+    /*  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+      background-color: #f5f5f5;
+      border-right: 1px solid #eee;
+      }
+  .btn {
+      height: 50px;
+      width: 150px;
+  
+  
+  }
+  
+    
+    /* Style the header */
+    header {
+     padding-right: 7px;
+      padding: 10px;
+    /*  text-align: center;*/
+      font-size:medium;
+      color: white;
+    }
+    
+  
+   
+    /* Clear floats after the columns */
+    section::after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+  
+  
+  img{
+  margin-left: 35%;
+  
+  }
+  
+  
+  
+  
+  section {
+    width: 100%;
+    display: inline-block;
+    background: #ccc;
+    height: 10vh;
+    text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: underline;
+  }
+  
+  .footer-distributed {
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 98%;
+    text-align: left;
+    font: normal 16px sans-serif;
+    padding: 5px 5px;
+    margin : 10px;
+  }
+  
+  .footer-distributed .footer-left p {
+    color: #8f9296;
+    font-size: 14px;
+    margin: 0;
+  }
+  /* Footer links */
+  
+  .footer-distributed p.footer-links {
+    font-size: 18px;
+    font-weight: bold;
+    color: #ffffff;
+    margin: 0 0 10px;
+    padding: 0;
+    transition: ease .25s;
+  }
+  
+  .footer-distributed p.footer-links a {
+    display: inline-block;
+    line-height: 1.8;
+    text-decoration: none;
+    color: inherit;
+    transition: ease .25s;
+  }
+  
+  .footer-distributed .footer-links a:before {
+    content: "·";
+    font-size: 20px;
+    left: 0;
+    color: #fff;
+    display: inline-block;
+    padding-right: 5px;
+  }
+  
+  .footer-distributed .footer-links .link-1:before {
+    content: none;
+  }
+  
+  
+  .footer-distributed .footer-right a:hover{transform:scale(1.1); -webkit-transform:scale(1.1);}
+  
+  .footer-distributed p.footer-links a:hover{text-decoration:underline;}
+  
+  /* Media Queries */
+  
+  @media (max-width: 600px) {
+    .footer-distributed .footer-left, .footer-distributed .footer-right {
+      text-align: center;
+    }
+  
+    .footer-distributed .footer-left p.footer-links {
+      line-height: 1.8;
+    }
+  }
+  
+  
+  .tabl{
+  align-content: center;
+  margin-left: 20px;
+  }
+
+  .homeTables{
+    padding : 10px;
+    border:1px solid black;
+    margin : 2px;
+    border-radius: 5px;
+  }
