--- a/pillReminderFE/src/styles/styles.css
+++ b/pillReminderFE/src/styles/styles.css
@@ -58,13 +58,35 @@ body{
     }
   
   
-  img{
-  margin-left: 35%;
-  
+  .image{
+    
   }
   
+  .up{
+    height : 100px;
+    /* border: 1px solid red; */
+    
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+  }
+  .prof-screen{
+   
+  }
+  #usertable{
+    margin-left: 20%;
+  }
+  #dependentTable{
+    margin-right: 15%;
+  }
+
+ 
   
-  
+  #medicalHistoryTable tr td input{
+    padding : 20px;
+    width: 70%;
+  }
   
   section {
     width: 100%;
